Rewrite l28t4. Changed methods realizations from recursion to loops.