@@ -1,36 +1,44 @@
 package lesson_28_generics_1.task_4;
 
+import java.util.StringJoiner;
+
 public class CustomList<T> {
     private Node<T> rootNode;
+    private int size = 0;
 
     public void add(T value) {
         if (rootNode == null) {
             rootNode = new Node<>(value);
         } else {
-            getLast(rootNode).setNextNode(new Node<>(value));
+            getLast().setNextNode(new Node<>(value));
         }
+
+        size++;
     }
 
     public void delete(T value) {
-        Node<T> delNode = findNodeByValue(value, rootNode);
-        Node<T> prevNode = getPreviousNode(delNode, rootNode);
+        Node<T> delNode = findNodeByValue(value);
+        Node<T> prevNode = getPreviousNode(delNode);
         Node<T> nextNode = delNode.getNextNode();
 
-        prevNode.setNextNode(nextNode);
+        if (delNode.equals(rootNode)) {
+            rootNode = rootNode.getNextNode();
+        } else {
+            prevNode.setNextNode(nextNode);
+        }
+
+        size--;
     }
 
     public int size() {
-        if (rootNode == null) {
-            return 0;
-        }
-        return getDepth(rootNode, 1);
+        return this.size;
     }
 
     public T find(T value) {
         if (rootNode == null) {
             throw new RuntimeException("List is empty");
         }
-        return findNodeByValue(value, rootNode).getValue();
+        return findNodeByValue(value).getValue();
     }
 
     @Override
@@ -38,45 +46,49 @@ public class CustomList<T> {
         if (rootNode == null) {
             return "[...]";
         }
-        return String.format("[%s]", makeString(rootNode));
+
+        StringJoiner joiner = new StringJoiner(", ");
+        Node<T> current = rootNode;
+
+        while (true) {
+            joiner.add(current.getValue().toString());
+            if (current.isLast()) {
+                return "[%s]".formatted(joiner);
+            }
+            current = current.getNextNode();
+        }
     }
 
-    private Node<T> getLast(Node<T> root) {
-        if (root.getNextNode() == null) {
-            return root;
+    private Node<T> getLast() {
+        Node<T> current = rootNode;
+        while (!current.isLast()) {
+            current = current.nextNode;
         }
-        return getLast(root.getNextNode());
+        return current;
     }
 
-    private int getDepth(Node<T> root, int depth) {
-        if (root.isLast()) {
-            return depth;
+    private Node<T> findNodeByValue(T targetValue) {
+        Node<T> current = rootNode;
+        while (true) {
+            if (current.getValue() == targetValue) { // matching objects by link
+                return current;
+            }
+            if (current.isLast()) {
+                throw new RuntimeException("Value not exist");
+            }
+            current = current.getNextNode();
         }
-        return getDepth(root.getNextNode(), depth + 1);
     }
 
-    private Node<T> findNodeByValue(T value, Node<T> root) {
-        if (root.getValue() == value) {
-            return root;
+    private Node<T> getPreviousNode(Node<T> targetNode) {
+        Node<T> current = rootNode;
+        while (!current.isLast()) {
+            if (current.getNextNode().equals(targetNode)) {
+                return current;
+            }
+            current = current.getNextNode();
         }
-        if (root.isLast()) {
-            throw new RuntimeException("Value not exist");
-        }
-        return findNodeByValue(value, root.getNextNode());
-    }
-
-    private Node<T> getPreviousNode(Node<T> targetNode, Node<T> node) {
-        if (node.getNextNode().equals(targetNode)) {
-            return node;
-        }
-        return getPreviousNode(node.getNextNode(), targetNode);
-    }
-
-    private String makeString(Node<T> root) {
-        if (root.isLast()) {
-            return root.value.toString();
-        }
-        return String.format("%s, %s", root.value.toString(), makeString(root.nextNode));
+        return null;
     }
 
     private static class Node<T> {
